# hrrr-render

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
data/: ne_10m_admin_0_boundary_lines_land.dbf  ne_10m_admin_0_boundary_lines_land.shp  ne_10m_admin_0_boundary_lines_land.shx  ne_10m_admin_1_states_provinces_lines.dbf  ne_10m_admin_1_states_provinces_lines.shp  ne_10m_admin_1_states_provinces_lines.shx  ne_10m_lakes.shx  ne_10m_populated_places_simple.dbf  ne_10m_populated_places_simple.shp  ne_50m_coastline.dbf  ne_50m_urban_areas.dbf  ne_50m_urban_areas.shp  ne_50m_urban_areas.shx
src/: composite.rs  fetch.rs  fields.rs  gui.rs  lib.rs  main.rs  sounding.rs
src/grib2/: mod.rs  packing.rs  sections.rs  tables.rs  templates.rs
src/render/: color.rs  contour.rs  mapbase.rs  mod.rs  projection.rs
