[package]
name = "hrrr-render"
version = "0.1.0"
edition = "2021"
description = "The world's fastest HRRR weather map renderer"
license = "MIT"

[dependencies]
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
grib = { version = "0.13", default-features = false }
png = "0.17"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
